--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">Web Studio</a>
         <nav>
+        <a href="./index.html">WebStudio</a>
+        
             <ul>
                 <li> <a href="">Studio</a> </li>
                 <li> <a href="">Portfolio</a></li>
@@ -16,19 +17,26 @@
             </ul>
         </nav>
         <address>
+            <ul>
+                <li>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+        </ul>
         </address>
 
     </header>
     <main>
-        <!--hero image  -->
+        <!--section 1 hero image  -->
         <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
         </section>
-        <!-- section 1 main information -->
+        <!-- section 2 main information -->
         <section>
+            <h2>Goals</h2>
             <ul>
                 <li>
             <h3>Strategy</h3>
@@ -38,17 +46,19 @@
             <li>
             <h3>Punctuality</h3>
             <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            <h3>Diligence</h3>
             </li>
             <li>
+                <h3>Diligence</h3>
             <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
-            </ul>
+            <li>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
 
         </section>
-        <!-- section 2 photo -->
+        <!-- section 3 photo -->
+        <section>
         <h2>Our Team</h2>
         <ul>
             <li>
@@ -84,10 +94,10 @@
         <p>UI Designer</p>
         </li>
 </ul>
-
+</section>
     </main>
     <footer>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
