--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"  href="./css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@700&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span class="Web">Web</span><span class="Studio">Studio</span></a>
+      
         
             <ul>
-                <li> <a href="">Studio</a> </li>
-                <li> <a href="">Portfolio</a></li>
-                <li> <a href="">Contacts</a></li>
+                <li> <a class="link" href="">Studio</a> </li>
+                <li> <a class="link" href="">Portfolio</a></li>
+                <li> <a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a class="info" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
         </ul>
         </address>
@@ -30,9 +42,9 @@
     </header>
     <main>
         <!--section 1 hero image  -->
-        <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <section class="hero-images">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="button-link" type="button">Order Service</button>
         </section>
         <!-- section 2 main information -->
         <section>
@@ -59,7 +71,7 @@
         </section>
         <!-- section 3 photo -->
 
-        <section>
+        <section class="our-team-all">
         <h2>Our Team</h2>
         <ul>
             <li>
@@ -96,10 +108,65 @@
         </li>
 </ul>
 </section>
+<section>
+    <h2>Our Portfolio</h2>
+    <ul>
+        <li>
+            <img src="./images/img2-portfolio-1.jpg"
+            alt="Banking App"
+            width="360"
+            height="300" />
+            <h3>Banking App</h3>
+            <p>App</p>
+        </li>
+        <li>
+            <img src="./images/img2-portfolio-2.jpg"
+            alt="Cashless Payment"
+            width="360"
+            height="300" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/img2-portfolio-3.jpg" 
+            alt="Meditation App"
+             width="360" 
+             height="300" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <img src="./images/img2-portfolio-4.jpg" 
+            alt="Taxi Service" 
+            width="360"
+            height="300" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/img2-portfolio-5.jpg" 
+            alt="Screen Illustrations" 
+            width="360"
+            height="300" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+        </li>
+        <li>
+            <img src="./images/img2-portfolio-6.jpg" 
+            alt="Online Courses"
+             width="360"
+             height="300" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+        </li>
+    </ul>
+</section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html"><span class="Web">Web</span><span class="Studio-footer">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
