--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav>
-        <a href="./index.html"><span class="Web">Web</span><span class="Studio">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="studio" >Studio</span></a>
       
         
             <ul>
@@ -28,7 +28,7 @@
                 <li> <a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="link-contact">
             <ul>
                 <li>
         <a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -48,38 +48,38 @@
         </section>
         <!-- section 2 main information -->
         <section>
-            <h2>Goals</h2>
+            <h2 class="name-our-team">Goals</h2>
             <ul>
                 <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business
+            <h3 class="name-main-info">Strategy</h3>
+            <p class="link-section-2">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <h3 class="name-main-info">Punctuality</h3>
+            <p class="link-section-2">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <h3 class="name-main-info">Diligence</h3>
+            <p class="link-section-2">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <h3 class="name-main-info">Technologies</h3>
+                <p class="link-section-2">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
             </ul>
         </section>
         <!-- section 3 photo -->
 
         <section class="our-team-all">
-        <h2>Our Team</h2>
+        <h2 class="name-our-team">Our Team</h2>
         <ul>
             <li>
         <img src="./images/team-card-1.jpg"
         alt="Mark Guerrero Product Designer"
         width="264" 
         height="260"/>
-        <h3>Mark Guerrero</h3>
+        <h3 class="name-main-info">Mark Guerrero</h3>
         <p>Product Designer</p>
         </li>
         <li>
@@ -87,7 +87,7 @@
         alt="Tom Ford Frontend Developer"
         width="264" 
         height="260"/>
-        <h3>Tom Ford</h3>
+        <h3 class="name-main-info">Tom Ford</h3>
         <p>Frontend Developer</p>
         </li>
         <li>
@@ -95,7 +95,7 @@
         alt="Camila Garcia Marketing"
         width="264" 
         height="260"/>
-        <h3>Camila Garcia</h3>
+        <h3 class="name-main-info">Camila Garcia</h3>
         <p>Marketing</p>
         </li>
         <li>
@@ -103,7 +103,7 @@
         alt="Daniel Wilson UI Designer"
         width="264"
         height="260"/>
-        <h3>Daniel Wilson</h3>
+        <h3 class="name-main-info">Daniel Wilson</h3>
         <p>UI Designer</p>
         </li>
 </ul>
@@ -165,7 +165,7 @@
 </section>
     </main>
     <footer class="footer">
-        <a href="./index.html"><span class="Web">Web</span><span class="Studio-footer">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="web-footer">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
