--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button class="button-link" type="button">Order Service</button>
         </section>
         <!-- section 2 main information -->
-        <section>
+        <section class="main-info-section">
             <h2 class="name-our-team">Goals</h2>
             <ul>
                 <li>
@@ -80,7 +80,7 @@
         width="264" 
         height="260"/>
         <h3 class="name-main-info">Mark Guerrero</h3>
-        <p>Product Designer</p>
+        <p class="link-section-2">Product Designer</p>
         </li>
         <li>
         <img src="./images/team-card-2.jpg"
@@ -88,7 +88,7 @@
         width="264" 
         height="260"/>
         <h3 class="name-main-info">Tom Ford</h3>
-        <p>Frontend Developer</p>
+        <p class="link-section-2">Frontend Developer</p>
         </li>
         <li>
         <img src="./images/team-card-3.jpg"
@@ -96,7 +96,7 @@
         width="264" 
         height="260"/>
         <h3 class="name-main-info">Camila Garcia</h3>
-        <p>Marketing</p>
+        <p class="link-section-2">Marketing</p>
         </li>
         <li>
         <img src="./images/team-card-4.jpg"
@@ -104,7 +104,7 @@
         width="264"
         height="260"/>
         <h3 class="name-main-info">Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <p class="link-section-2">UI Designer</p>
         </li>
 </ul>
 </section>
@@ -116,24 +116,24 @@
             alt="Banking App"
             width="360"
             height="300" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="name-main-info">Banking App</h3>
+            <p class="link-section-2">App</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-2.jpg"
             alt="Cashless Payment"
             width="360"
             height="300" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="name-main-info">Cashless Payment</h3>
+            <p class="link-section-2">Marketing</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-3.jpg" 
             alt="Meditation App"
              width="360" 
              height="300" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="name-main-info">Meditation App</h3>
+            <p class="link-section-2">App</p>
         </li>
     </ul>
     <ul>
@@ -142,24 +142,24 @@
             alt="Taxi Service" 
             width="360"
             height="300" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="name-main-info">Taxi Service</h3>
+            <p class="link-section-2">Marketing</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-5.jpg" 
             alt="Screen Illustrations" 
             width="360"
             height="300" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="name-main-info">Screen Illustrations</h3>
+            <p class="link-section-2">Design</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-6.jpg" 
             alt="Online Courses"
              width="360"
              height="300" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="name-main-info">Online Courses</h3>
+            <p class="link-section-2">Marketing</p>
         </li>
     </ul>
 </section>
