--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </ul>
 </section>
 <section>
-    <h2>Our Portfolio</h2>
+    <h2 class="name-our-team">Our Portfolio</h2>
     <ul>
         <li>
             <img src="./images/img2-portfolio-1.jpg"
