--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
         <section class="main-info-section">
             <h2 class="name-our-team">Goals</h2>
             <ul>
-                <li>
+                <li class="list-main">
             <h3 class="name-main-info">Strategy</h3>
-            <p class="link-section-2">Our goal is to identify the business
+            <p class="link-section-second">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li>
+            <li class="list-main">
             <h3 class="name-main-info">Punctuality</h3>
-            <p class="link-section-2">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <p class="link-section-second">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
+            <li class="list-main">
                 <h3 class="name-main-info">Diligence</h3>
-            <p class="link-section-2">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <p class="link-section-second">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
+            <li class="list-main">
                 <h3 class="name-main-info">Technologies</h3>
-                <p class="link-section-2">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <p class="link-section-second">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
             </ul>
         </section>
@@ -80,7 +80,7 @@
         width="264" 
         height="260"/>
         <h3 class="name-main-info">Mark Guerrero</h3>
-        <p class="link-section-2">Product Designer</p>
+        <p class="link-section-second">Product Designer</p>
         </li>
         <li>
         <img src="./images/team-card-2.jpg"
@@ -88,7 +88,7 @@
         width="264" 
         height="260"/>
         <h3 class="name-main-info">Tom Ford</h3>
-        <p class="link-section-2">Frontend Developer</p>
+        <p class="link-section-second">Frontend Developer</p>
         </li>
         <li>
         <img src="./images/team-card-3.jpg"
@@ -96,7 +96,7 @@
         width="264" 
         height="260"/>
         <h3 class="name-main-info">Camila Garcia</h3>
-        <p class="link-section-2">Marketing</p>
+        <p class="link-section-second">Marketing</p>
         </li>
         <li>
         <img src="./images/team-card-4.jpg"
@@ -104,7 +104,7 @@
         width="264"
         height="260"/>
         <h3 class="name-main-info">Daniel Wilson</h3>
-        <p class="link-section-2">UI Designer</p>
+        <p class="link-section-second">UI Designer</p>
         </li>
 </ul>
 </section>
@@ -117,7 +117,7 @@
             width="360"
             height="300" />
             <h3 class="name-main-info">Banking App</h3>
-            <p class="link-section-2">App</p>
+            <p class="link-section-second">App</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-2.jpg"
@@ -125,7 +125,7 @@
             width="360"
             height="300" />
             <h3 class="name-main-info">Cashless Payment</h3>
-            <p class="link-section-2">Marketing</p>
+            <p class="link-section-second">Marketing</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-3.jpg" 
@@ -133,7 +133,7 @@
              width="360" 
              height="300" />
             <h3 class="name-main-info">Meditation App</h3>
-            <p class="link-section-2">App</p>
+            <p class="link-section-second">App</p>
         </li>
     </ul>
     <ul>
@@ -143,7 +143,7 @@
             width="360"
             height="300" />
             <h3 class="name-main-info">Taxi Service</h3>
-            <p class="link-section-2">Marketing</p>
+            <p class="link-section-second">Marketing</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-5.jpg" 
@@ -151,7 +151,7 @@
             width="360"
             height="300" />
             <h3 class="name-main-info">Screen Illustrations</h3>
-            <p class="link-section-2">Design</p>
+            <p class="link-section-second">Design</p>
         </li>
         <li>
             <img src="./images/img2-portfolio-6.jpg" 
@@ -159,7 +159,7 @@
              width="360"
              height="300" />
             <h3 class="name-main-info">Online Courses</h3>
-            <p class="link-section-2">Marketing</p>
+            <p class="link-section-second">Marketing</p>
         </li>
     </ul>
 </section>
