--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="our-team-all">
         <h2 class="name-our-team">Our Team</h2>
         <ul>
-            <li>
+            <li class="list-main">
         <img src="./images/team-card-1.jpg"
         alt="Mark Guerrero Product Designer"
         width="264" 
@@ -82,7 +82,7 @@
         <h3 class="name-main-info">Mark Guerrero</h3>
         <p class="link-section-second">Product Designer</p>
         </li>
-        <li>
+        <li class="list-main">
         <img src="./images/team-card-2.jpg"
         alt="Tom Ford Frontend Developer"
         width="264" 
@@ -90,7 +90,7 @@
         <h3 class="name-main-info">Tom Ford</h3>
         <p class="link-section-second">Frontend Developer</p>
         </li>
-        <li>
+        <li class="list-main">
         <img src="./images/team-card-3.jpg"
         alt="Camila Garcia Marketing"
         width="264" 
@@ -98,7 +98,7 @@
         <h3 class="name-main-info">Camila Garcia</h3>
         <p class="link-section-second">Marketing</p>
         </li>
-        <li>
+        <li class="list-main">
         <img src="./images/team-card-4.jpg"
         alt="Daniel Wilson UI Designer"
         width="264"
