--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
         
             <ul>
-                <li> <a class="link" href="">Studio</a> </li>
+                <li> <a class="link" href="./index.html">Studio</a> </li>
                 <li> <a class="link" href="">Portfolio</a></li>
                 <li> <a class="link" href="">Contacts</a></li>
             </ul>
